--- a/part/lec02.tex
+++ b/part/lec02.tex
@@ -122,7 +122,7 @@ Why worry about the propagator?
 
 Level 1: It allows us to solve for the general dynamics. Suppose we have an initial state $|\phi\rangle$. Its time evolution in Schrodinger's picture is
 \[ |\phi \left( t \right) \rangle =e^{-i\hat{H}t/\hbar}|\phi \rangle \]
-If we specify our initial state in some basis, and suppose we have pre-computed the propagator in that basis, then we can readily compute the time evolved state through a ``matrixx multiplication''.
+If we specify our initial state in some basis, and suppose we have pre-computed the propagator in that basis, then we can readily compute the time evolved state through a ``matrix multiplication''.
 
 energy basis
 \begin{gather*}
