--- a/part/lec03.tex
+++ b/part/lec03.tex
@@ -81,7 +81,7 @@ Note that the pairing between $\vec{q}$ and $-\vec{q}$ is natural for a couple o
     \item $\hat{\phi}_{\vec{q}}^{\alpha \dagger}=\frac{1}{\sqrt{V}}\sum_{\vec{R}}{e^{-i\vec{q}\cdot \vec{R}}\hat{\phi}_{\vec{R}}^{\alpha}}=\hat{\phi}_{-\vec{q}}^{\alpha}$
     \item $\hat{t}_{\vec{a}}\hat{\phi}_{\vec{q}}^{\alpha}\hat{t}_{\vec{a}}^{-1}=\frac{1}{\sqrt{V}}\sum_{\vec{R}}{e^{i\vec{q}\cdot \vec{R}}\hat{\phi}_{\vec{R}+\vec{a}}^{\alpha}}=e^{-i\vec{q}\cdot \vec{a}}\hat{\phi}_{\vec{q}}^{\alpha}$, where $\hat{t}_{\vec{a}}$ is lattice translation by $\vec{a}$
 \end{enumerate}
-So $\hat{\phi}_{\vec{q}}^\alpha$ and $\hat{\phi}_{-\vec{q}}^\alpha$ transform in opposite way under translation, and they have to appear in pairs to keep the Hamiltonian translation invariant. (Same story for non-FFLO superconductors: pariring $\sim\Delta C_{\vec{q}}^\dagger C_{-\vec{q}}^\dagger$)
+So $\hat{\phi}_{\vec{q}}^\alpha$ and $\hat{\phi}_{-\vec{q}}^\alpha$ transform in opposite way under translation, and they have to appear in pairs to keep the Hamiltonian translation invariant. (Same story for non-FFLO superconductors: pairing $\sim\Delta C_{\vec{q}}^\dagger C_{-\vec{q}}^\dagger$)
 
 Let's finish diagonalizing the Hamiltonian. First note that the Fourier transform is complex, so it's unitary (instead of orthogonal). This leads to a slightly different commutation relation.
 \begin{align*}
@@ -127,7 +127,7 @@ In other words, we expect the lowest frequencies at $\vec{q}=\vec{0}$ to be $0$.
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=\textwidth]{data/fig/lec03-fig00.png}
+    \includegraphics[width=\textwidth]{jupyterbook/data/fig/lec03-fig00.png}
     % \caption{caption environment}
     % \label{fig:00} %must after caption
 \end{figure}
@@ -184,14 +184,14 @@ In any case, we have completely solved the free phonon problem, in the sense tha
 But let's pretend we are experimentalists. How do we even get to get to find the coupling coefficients etc in the first place? Without that, how do we find out the phonon frequencies etc? The natural approach is to perturb the system, and watches how it responds, e.g.,
 \begin{figure}[h]
     \centering
-    \includegraphics[width=\textwidth]{data/fig/lec03-fig01.png}
+    \includegraphics[width=\textwidth]{jupyterbook/data/fig/lec03-fig01.png}
     % \caption{caption environment}
     % \label{fig:00} %must after caption
 \end{figure}
 If you have a guitar string, you probe its frequency by plucking with you fingers, Too bad our fingers are too big for the microscopic crystal! Instead, we probe phonons with other tools, like photon, or more indirectly through electrons in the solid. E.g.
 \begin{figure}[h]
     \centering
-    \includegraphics[width=\textwidth]{data/fig/lec03-fig02.png}
+    \includegraphics[width=\textwidth]{jupyterbook/data/fig/lec03-fig02.png}
     % \caption{caption environment}
     % \label{fig:00} %must after caption
 \end{figure}
