--- a/part/lec03.tex
+++ b/part/lec03.tex
@@ -125,7 +125,7 @@ One specific distortion we can obtain in this way is to shift every atom by the 
 
 In other words, we expect the lowest frequencies at $\vec{q}=\vec{0}$ to be $0$. We have as many of them as the spatial dimension $d$. In fact, we can say something stronger: a nearly uniform distortion should, by similar reasoning, takes very little energy. We can make the energy cost as small as we wish by taking $|\vec{q}|\to 0$. This implies we have $d$ branches of low-lying phonon modes radiating out from the $\Gamma$ point ($\vec{q}=\vec{0}$). There are called ``acoustic phonons''. There existence is a consequence of the spontaneously broken global continuous translation symmetry when we, say, go from a liquid of the same atoms to a crystal. They can be identified as examples of Goldstone modes. Recall, however, that in our current treatment the $\alpha$ index ranges beyond $1,2,\cdots,d$ if we have multiple atoms per unit cell. We argued the lowest $d$ eigenvalues of $D_{\vec{q}}^{\alpha\beta}$ will be $0$, but we don't really have a constranit for the rest. These will generically have a finite frequency, and they are referred to as the ``optical phonons''.
 
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \includegraphics[width=\textwidth]{jupyterbook/data/fig/lec03-fig00.png}
     % \caption{caption environment}
@@ -182,14 +182,14 @@ That's an awesome trick. What about computing some other expectation values? It'
 In any case, we have completely solved the free phonon problem, in the sense that for any observables we would want to compute, we have a way of doing so (by rotating to the decoupled QHO basis).
 
 But let's pretend we are experimentalists. How do we even get to get to find the coupling coefficients etc in the first place? Without that, how do we find out the phonon frequencies etc? The natural approach is to perturb the system, and watches how it responds, e.g.,
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \includegraphics[width=\textwidth]{jupyterbook/data/fig/lec03-fig01.png}
     % \caption{caption environment}
     % \label{fig:00} %must after caption
 \end{figure}
 If you have a guitar string, you probe its frequency by plucking with you fingers, Too bad our fingers are too big for the microscopic crystal! Instead, we probe phonons with other tools, like photon, or more indirectly through electrons in the solid. E.g.
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \includegraphics[width=\textwidth]{jupyterbook/data/fig/lec03-fig02.png}
     % \caption{caption environment}
