--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{xcolor}
 
 \title{Title}
 \author{Author}
@@ -20,5 +21,7 @@
 \input{part/lec02.tex}
 
 \input{part/lec03.tex}
+
+\input{part/lec04.tex}
 
 \end{document}
