--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass{book}
 
 \usepackage{lipsum}
+\usepackage{enumitem}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -23,5 +24,7 @@
 \input{part/lec03.tex}
 
 \input{part/lec04.tex}
+
+\input{part/lec05.tex}
 
 \end{document}
