--- a/part/lec01.tex
+++ b/part/lec01.tex
@@ -97,7 +97,7 @@ Which is a Gaussian. Recall $X=\sqrt{\frac{m\omega}{\hbar}}x$,
 \[ \phi _0\left( x \right) =\mathcal{N} e^{-m\omega x^2/\left( 2\hbar \right)} \]
 To get the normalization,
 \begin{align*}
-    1&=\int_{-\infty}^{\infty}{\left| \phi _0\left( x \right) \right|}dx=\mathcal{N} ^2\int_{-\infty}^{\infty}{e^{-m\omega x^2/\hbar}dx}\\
+    1&=\int_{-\infty}^{\infty}{\left| \phi _0\left( x \right) \right|^2 dx}=\mathcal{N} ^2\int_{-\infty}^{\infty}{e^{-m\omega x^2/\hbar}dx}\\
     &=\mathcal{N} ^2\sqrt{\frac{\hbar}{2m\omega}}\int_{-\infty}^{\infty}{e^{-m\omega x^2/\hbar}\exp \left( -\left( \sqrt{\frac{\hbar}{2m\omega}}x \right) ^2/2 \right) d\left( \sqrt{\frac{\hbar}{2m\omega}}x \right)}\\
     &=\mathcal{N} ^2\sqrt{\frac{\hbar}{2m\omega}}\sqrt{2\pi}
 \end{align*}
@@ -109,7 +109,7 @@ A standard discussion will next introduce the real-space wave function of the ex
 
 \section{coherent state}
 
-We have seen that the creation and annihilation operatos provides a simple way to analyze the QHO. Let's now take these as the ``coordinates'' for our problem. Recall position basis $\hat{x}|x\rangle =x|x\rangle$. Similarly, we consider the eigenstates of the form
+We have seen that the creation and annihilation operators provides a simple way to analyze the QHO. Let's now take these as the ``coordinates'' for our problem. Recall position basis $\hat{x}|x\rangle =x|x\rangle$. Similarly, we consider the eigenstates of the form
 \[ \hat{a}|\alpha \rangle =\alpha |\alpha \rangle ;\quad \alpha \in \mathbb{C} \]
 E.g., The ground state $\hat{a}|0\rangle =0|0\rangle =0$. To solve for the eigenstate, write
 \[ |\alpha \rangle =\sum_{n=0}{C_n\left( \alpha \right) |n\rangle}\]
