--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{xcolor}
+\usepackage{mathrsfs}
 
 \title{Title}
 \author{Author}
@@ -32,5 +33,7 @@
 \input{part/lec07.tex}
 
 \input{part/lec08.tex}
+
+\input{part/lec09.tex}
 
 \end{document}
