--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,15 @@
 \documentclass{book}
 
+\usepackage{tikz}
+\usetikzlibrary{positioning, shapes, calc}
 \usepackage{lipsum}
 \usepackage{enumitem}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{simpler-wick}
+\usepackage{hyperref}
+\usepackage{csquotes}
 \usepackage{graphicx}
 \usepackage{xcolor}
 \usepackage{mathrsfs}
@@ -35,5 +40,7 @@
 \input{part/lec08.tex}
 
 \input{part/lec09.tex}
+
+\input{part/lec10.tex}
 
 \end{document}
