--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usetikzlibrary{positioning, shapes, calc}
 \usepackage{lipsum}
 \usepackage{enumitem}
+\usepackage{float}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -54,5 +55,7 @@
 \input{part/lec15.tex}
 
 \input{part/lec16.tex}
+
+\input{part/lec17.tex}
 
 \end{document}
