minor typo fixes

--- a/part/lec01.tex
+++ b/part/lec01.tex
@@ -19,12 +19,12 @@ goals
     \item change some basis
 \end{enumerate}
 
-As a warm-up, consider the QHO in one-dimension.
+As a warm-up, consider the QHO in one dimension.
 \begin{gather*}
     \hat{H}=\frac{\hat{p}^2}{2m}+\frac{1}{2}m\omega ^2\hat{x}^2 \\
     \left[ \hat{x},\hat{p} \right] =i\hbar \\
 \end{gather*}
-in position basis, $\hat{p}=-i\hbar \partial _x$. check
+in position basis, $\hat{p}=-i\hbar \partial _x$. Check that
 \begin{align*}
     \left[ \hat{x},\hat{p} \right] f\left( x \right) &=-i\hbar x\partial _xf+i\hbar \partial _x\left( xf \right) \\
     &=-i\hbar x\partial _xf+i\hbar f+i\hbar x\partial _xf\\
